# sabbel

./: .gitignore  LICENSE  Makefile  README.md  install.sh  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
docs/: TODO.md
docs/superpowers/plans/: 2026-04-08-flowspeak.md  2026-05-13-audio-input-selection.md  2026-05-13-hallucination-filtering.md
docs/superpowers/specs/: 2026-04-08-voice-dictation-design.md  2026-05-13-audio-input-selection-design.md  2026-05-13-hallucination-filtering-design.md
flowspeak/: __main__.py  app.py  config.py  dictionary.py  hotkey.py  recorder.py  single_instance.py  transcriber.py
sabbel/: __main__.py  app.py  config.py  dictionary.py  hallucinations.py  hotkey.py  injector.py  permissions.py  preferences.py  recorder.py  single_instance.py
scripts/: FlowSpeak-Info.plist  Sabbel-Info.plist  com.flowspeak.agent.plist  com.sabbel.agent.plist  dictionary.example.toml  flowspeak_launcher.c  sabbel_launcher.c
tests/: conftest.py  test_app.py  test_config.py  test_dictionary.py  test_hallucinations.py  test_mic_selection.py  test_preferences.py  test_recorder.py  test_single_instance.py  test_transcriber.py
