[project]
name = "flowspeak"
version = "0.1.0"
description = "Local voice dictation for macOS"
requires-python = ">=3.10"
dependencies = [
    "mlx-whisper>=0.4.0",
    "sounddevice>=0.5.0",
    "numpy>=1.24",
    "pynput>=1.8.0",
    "rumps>=0.4.0",
    "pyobjc-framework-Cocoa",
    "pyobjc-framework-Quartz",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
flowspeak = "flowspeak.__main__:main"

[tool.setuptools.packages.find]
include = ["flowspeak*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
