[project]
name = "sabbel"
version = "0.1.1"
description = "Lokale Spracherkennung fuer macOS"
requires-python = ">=3.10"
dependencies = [
    "mlx-whisper>=0.4.0",
    "sounddevice>=0.5.0",
    "numpy>=1.24",
    "pynput>=1.8.0",
    "rumps>=0.4.0",
    "pyobjc-framework-Cocoa",
    "pyobjc-framework-Quartz",
    "pyobjc-framework-AVFoundation",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
build = ["py2app>=0.28.8", "setuptools<81"]

[project.scripts]
sabbel = "sabbel.__main__:main"

[tool.setuptools.packages.find]
include = ["sabbel*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
